Node alignment bug fix (ng-class modified)

--- a/knowagewhatifengine/WebContent/css/olap.css
+++ b/knowagewhatifengine/WebContent/css/olap.css
@@ -667,8 +667,8 @@ md-option[selected], md-select-menu md-option[selected]{
 
 
 .tree-item-padding{
-	padding-left:10px;
+	padding-left:10px !important;
 }
 .tree-item-padding-leaf{
-	padding-left:35px;
+	padding-left:35px !important;
 }
